ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: <namespace>
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Guacamole"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mydomain.no-ip.org
      secretName: letsencrypt-app-tls
  rules:
  - host: mydomain.no-ip.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guacamole
            port:
              number: 80
